--- a/RepReady/Views/Exercises/Edit.cshtml
+++ b/RepReady/Views/Exercises/Edit.cshtml
@@ -91,6 +91,11 @@
                             <input type="hidden" name="WorkoutId" value="@ViewBag.WorkoutId" />
                         </div>
                         <br />
+                        <div class="alert alert-danger validation-summary-valid">
+                            <ul>
+                                <li style="display:none"></li>
+                            </ul>
+                        </div>
 
                         <!-- Submit Button -->
                         <button type="submit" class="btn btn-success">Salveaza exercițiul</button>
