--- a/RepReady/Views/WorkoutInvitations/New.cshtml
+++ b/RepReady/Views/WorkoutInvitations/New.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿<style>
+    .invitation-container{
+        background: url('/images/top-view-weights-with-measuring-tape-copy-space.jpg') no-repeat center center/cover
+    }
+</style>
 <div class="invitation-container">
     <form method="post" asp-action="New" asp-controller="WorkoutInvitations" class="invitation-form">
         <div class="form-container-inv">
