--- a/RepReady/Views/Workouts/Edit.cshtml
+++ b/RepReady/Views/Workouts/Edit.cshtml
@@ -33,6 +33,12 @@
                             </select>
                             <span asp-validation-for="CategoryId" class="text-danger"></span>
                         </div>
+                        <br />
+                        <div class="alert alert-danger validation-summary-valid">
+                            <ul>
+                                <li style="display:none"></li>
+                            </ul>
+                        </div>
                         <div class="text-center">
                             <button class="btn btn-sm btn-success" type="submit">Modifica antrenament</button>
                         </div>
