--- a/RepReady/wwwroot/css/site.css
+++ b/RepReady/wwwroot/css/site.css
@@ -20,6 +20,7 @@ html {
 body {
     margin-bottom: 60px;
     overflow-x: hidden; /* Prevent horizontal scrolling */
+
 }
 
 main {
@@ -366,4 +367,64 @@ main {
     .alert-icon {
         font-size: 1.5rem;
     }
+}
+
+#background-div {
+    background-image: url('images/background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/* Workouts */
+
+/* Workout Cards */
+.card {
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.workout-card {
+    background-color: #fff;
+    border: none;
+    transition: transform 0.3s ease-in-out;
+}
+
+    .workout-card:hover {
+        transform: translateY(-5px);
+    }
+
+.workout-title {
+    font-size: 1.5rem;
+    color: #f54b42;
+}
+
+.workout-description {
+    font-size: 1rem;
+    color: #555;
+}
+
+.card-footer {
+    background-color: #f8f9fa;
+}
+
+.btn-workout-detail {
+    padding: 1rem 2rem;
+    background-color: #f54b42;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+    .btn-workout-detail:hover {
+        background-color: #d43e35;
+    }
+
+
+.nav-link:hover {
+    color: #007bff !important; /* Bootstrap primary color */
 }
