small front-end bug on laptop screens

--- a/RepReady/Views/Workouts/Index.cshtml
+++ b/RepReady/Views/Workouts/Index.cshtml
@@ -36,23 +36,22 @@
     <a class="btn btn-primary" asp-controller="Workouts" asp-action="New">Adaugă Antrenament</a>
 </div>
 
-<div class="row card-size">
-    @foreach (var workout in ViewBag.Workouts)
-    {
-        
-        <div class="col-md-4 mb-4 d-flex justify-content-center">
-            <div class="card workout-card shadow-sm d-flex flex-column justify-content-between">
-                <div class="card-body">
-                    <h5 class="card-title workout-title mb-3 text-primary">@workout.Name</h5>
-                    <p class="card-text workout-description">@workout.Description</p>
-                </div>
-                <div class="card-footer text-center">
-                    <a class="btn btn-primary workout-btn" asp-controller="Workouts" asp-action="Show" asp-route-id="@workout.Id">Afișare Antrenament</a>
+    <div class="row card-size workout-container">
+        @foreach (var workout in ViewBag.Workouts)
+        {
+            <div class="col-md-4 mb-4 d-flex justify-content-center">
+                <div class="card workout-card shadow-sm d-flex flex-column justify-content-between">
+                    <div class="card-body">
+                        <h5 class="card-title workout-title mb-3 text-primary">@workout.Name</h5>
+                        <p class="card-text workout-description">@workout.Description</p>
+                    </div>
+                    <div class="card-footer text-center">
+                        <a class="btn btn-primary workout-btn" asp-controller="Workouts" asp-action="Show" asp-route-id="@workout.Id">Afișare Antrenament</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
-</div>
+        }
+    </div>
 
 
 @* Afisarea paginata *@
