--- a/RepReady/wwwroot/css/site.css
+++ b/RepReady/wwwroot/css/site.css
@@ -428,3 +428,7 @@ main {
 .nav-link:hover {
     color: #007bff !important; /* Bootstrap primary color */
 }
+
+.workout-container{
+    height:70%;
+}
